[gd_scene load_steps=9 format=3 uid="uid://cox00ulo7ug"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_0gr3q"]
[ext_resource type="Texture2D" uid="uid://dfnfkxlsvoonu" path="res://Default.png" id="2_oalvw"]
[ext_resource type="Texture2D" uid="uid://c40aonj1nssxe" path="res://Plus.png" id="3_d2vku"]
[ext_resource type="Texture2D" uid="uid://bwmv6u2wn7674" path="res://Speaker-0.png" id="3_fnyet"]
[ext_resource type="Texture2D" uid="uid://ct058pcda1h8a" path="res://Previous.png" id="4_m4qnx"]
[ext_resource type="Texture2D" uid="uid://b4n55nt6tunmr" path="res://Gear.png" id="6_75vct"]
[ext_resource type="Texture2D" uid="uid://d2a8e56pguvjy" path="res://icon.svg" id="7_4f2u8"]

[sub_resource type="LabelSettings" id="LabelSettings_ldwuw"]
font_size = 35
outline_size = 10
outline_color = Color(0.233925, 0.233925, 0.233925, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_0gr3q")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_oalvw")
region_rect = Rect2(8, 3, 73, 67)

[node name="plus" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 739.0
offset_top = 320.0
offset_right = 767.0
offset_bottom = 348.0
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("3_d2vku")

[node name="minus" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 365.0
offset_top = 315.0
offset_right = 396.0
offset_bottom = 343.0
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("4_m4qnx")

[node name="Sound" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 539.0
offset_top = 300.0
offset_right = 595.0
offset_bottom = 356.0
scale = Vector2(1.7, 1.7)
texture_normal = ExtResource("3_fnyet")

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 577.0
offset_top = 418.0
offset_right = 617.0
offset_bottom = 479.0
text = "NUM"
label_settings = SubResource("LabelSettings_ldwuw")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureButton2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 508.0
offset_right = 149.0
offset_bottom = 636.0
texture_normal = ExtResource("7_4f2u8")

[node name="Panel" type="Panel" parent="."]
offset_left = 22.0
offset_top = 15.0
offset_right = 360.0
offset_bottom = 123.0

[node name="PointLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Points: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 1058.0
offset_top = 22.0
offset_right = 1198.0
offset_bottom = 162.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_75vct")

[connection signal="gui_input" from="NinePatchRect/plus" to="." method="_on_plus_gui_input"]
[connection signal="gui_input" from="NinePatchRect/minus" to="." method="_on_minus_gui_input"]
[connection signal="pressed" from="NinePatchRect/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="gui_input" from="TextureButton" to="." method="_on_texture_button_gui_input"]
